fix alignment issues with stop/start button

--- a/earthquake/Base.lproj/MainMenu.xib
+++ b/earthquake/Base.lproj/MainMenu.xib
@@ -441,7 +441,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uBl-mP-EPP">
-                                            <rect key="frame" x="56" y="294" width="102" height="17"/>
+                                            <rect key="frame" x="63" y="294" width="102" height="17"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Folder to serve:" id="XGt-MP-rTr">
                                                 <font key="font" metaFont="system"/>
@@ -471,7 +471,7 @@
                                             <font key="titleFont" metaFont="system"/>
                                         </box>
                                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="66c-jN-3pm">
-                                            <rect key="frame" x="164" y="291" width="317" height="22"/>
+                                            <rect key="frame" x="171" y="291" width="310" height="22"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="ih7-dh-E6V">
                                                 <font key="font" metaFont="system"/>
@@ -480,7 +480,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bff-Q9-45y">
-                                            <rect key="frame" x="11" y="284" width="45" height="32"/>
+                                            <rect key="frame" x="11" y="284" width="53" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="push" bezelStyle="rounded" image="NSRightFacingTriangleTemplate" imagePosition="overlaps" alignment="center" borderStyle="border" inset="2" id="btP-aJ-iYq">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -492,6 +492,7 @@
                                         </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="uBl-mP-EPP" firstAttribute="leading" secondItem="yqE-Ge-On9" secondAttribute="leading" constant="65" id="019-bo-5SU"/>
                                         <constraint firstItem="bff-Q9-45y" firstAttribute="top" secondItem="yqE-Ge-On9" secondAttribute="top" constant="36" id="26c-yF-cXK"/>
                                         <constraint firstItem="Xj8-b0-Lye" firstAttribute="trailing" secondItem="U0Z-2h-K3M" secondAttribute="trailing" id="2Gq-33-csR"/>
                                         <constraint firstItem="Xj8-b0-Lye" firstAttribute="trailing" secondItem="nkV-uN-VBZ" secondAttribute="trailing" id="3U2-Cw-53g"/>
@@ -500,12 +501,12 @@
                                         <constraint firstItem="bff-Q9-45y" firstAttribute="leading" secondItem="U0Z-2h-K3M" secondAttribute="leading" id="GHc-vW-cxH"/>
                                         <constraint firstItem="bff-Q9-45y" firstAttribute="bottom" secondItem="66c-jN-3pm" secondAttribute="bottom" id="Gdm-5u-J7v"/>
                                         <constraint firstItem="Xj8-b0-Lye" firstAttribute="leading" secondItem="66c-jN-3pm" secondAttribute="trailing" constant="8" id="MF4-jE-QbP"/>
-                                        <constraint firstItem="66c-jN-3pm" firstAttribute="leading" secondItem="uBl-mP-EPP" secondAttribute="trailing" constant="8" symbolic="YES" id="Qec-ni-ngb"/>
+                                        <constraint firstItem="uBl-mP-EPP" firstAttribute="leading" secondItem="bff-Q9-45y" secondAttribute="trailing" constant="7" id="MvU-xU-exJ"/>
                                         <constraint firstItem="nkV-uN-VBZ" firstAttribute="top" secondItem="bff-Q9-45y" secondAttribute="bottom" constant="23" id="RzF-cs-4xb"/>
+                                        <constraint firstItem="uBl-mP-EPP" firstAttribute="baseline" secondItem="bff-Q9-45y" secondAttribute="baseline" id="SQp-bq-VX3"/>
                                         <constraint firstAttribute="bottom" secondItem="0bQ-29-iHp" secondAttribute="bottom" constant="17" id="WQd-XZ-ZkN"/>
-                                        <constraint firstItem="bff-Q9-45y" firstAttribute="baseline" secondItem="uBl-mP-EPP" secondAttribute="baseline" id="XHT-md-zBn"/>
                                         <constraint firstItem="Xj8-b0-Lye" firstAttribute="leading" secondItem="66c-jN-3pm" secondAttribute="trailing" constant="8" symbolic="YES" id="Xhl-cQ-vRY"/>
-                                        <constraint firstItem="uBl-mP-EPP" firstAttribute="leading" secondItem="bff-Q9-45y" secondAttribute="trailing" constant="8" symbolic="YES" id="dRC-o0-glW"/>
+                                        <constraint firstItem="66c-jN-3pm" firstAttribute="leading" secondItem="uBl-mP-EPP" secondAttribute="trailing" constant="8" symbolic="YES" id="frN-8s-NWZ"/>
                                         <constraint firstItem="0bQ-29-iHp" firstAttribute="top" secondItem="yqE-Ge-On9" secondAttribute="top" constant="114" id="hmw-am-FEq"/>
                                         <constraint firstItem="bff-Q9-45y" firstAttribute="leading" secondItem="yqE-Ge-On9" secondAttribute="leading" constant="17" id="kwg-c1-qHu"/>
                                         <constraint firstItem="0bQ-29-iHp" firstAttribute="top" secondItem="U0Z-2h-K3M" secondAttribute="bottom" constant="8" symbolic="YES" id="r71-OB-j36"/>
